2012-05-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (vcom_port_setup_with_nodata) Rename.
	(vcom_port_data_setup): Rename and fix return value.

	* src/usb-cdc.h (VIRTUAL_COM_PORT_DATA_SIZE)
	(VIRTUAL_COM_PORT_INT_SIZE): New.

	* src/main.c (#include): Add usb-cdc.h.
	* src/usb_desc.c (#include): Add usb-cdc.h.
	* src/usb_endp.c (#include): Add usb_lld.h.

	* src/configure ($help): Add FST_01.

2012-05-10  Niibe Yutaka  <gniibe@fsij.org>

	* STM32_USB-FS-Device_Driver, Virtual_COM_Port: Remove.

	* src/usb_lld.c (#include): Don't include usb_lib.h.
	(RECIPIENT, REG_BASE PMA_ADDR, CNTR, ISTR, FNR, DADDR, BTABLE)
	(ISTR_CTR, ISTR_DOVR, ISTR_ERR, ISTR_WKUP, ISTR_SUSP, ISTR_RESET)
	(ISTR_SOF, ISTR_ESOF, ISTR_DIR, ISTR_EP_ID, CLR_CTR, CLR_DOVR)
	(CLR_ERR, CLR_WKUP, CLR_SUSP, CLR_RESET, CLR_SOF, CLR_ESOF)
	(CNTR_CTRM, CNTR_DOVRM, CNTR_ERRM, CNTR_WKUPM, CNTR_SUSPM)
	(CNTR_RESETM, CNTR_SOFM, CNTR_ESOFM, CNTR_RESUME, CNTR_FSUSP)
	(CNTR_LPMODE, CNTR_PDWN, CNTR_FRES, DADDR_EF, DADDR_ADD)
	(EP_CTR_RX, EP_DTOG_RX, EPRX_STAT, EP_SETUP, EP_T_FIELD, EP_KIND)
	(EP_CTR_TX, EP_DTOG_TX, EPTX_STAT, EPADDR_FIELD, EPREG_MASK)
	(EP_TX_DIS, EP_TX_STALL, EP_TX_NAK, EP_TX_VALID, EPTX_DTOG1)
	(EPTX_DTOG2, EP_RX_DIS, EP_RX_STALL, EP_RX_NAK, EP_RX_VALID)
	(EPRX_DTOG1, EPRX_DTOG2): New. Compatible to ST's USB-FS-Device_Lib.
	(CH_IRQ_HANDLER): Call usb_interrupt_handler (was: USB_Istr).
	(EP1_IN_Callback, EP2_IN_Callback, EP3_IN_Callback)
	(EP4_IN_Callback, EP5_IN_Callback, EP6_IN_Callback)
	(EP7_IN_Callback, EP1_OUT_Callback, EP2_OUT_Callback)
	(EP3_OUT_Callback, EP4_OUT_Callback, EP5_OUT_Callback)
	(EP6_OUT_Callback, EP7_OUT_Callback): New.  Implement here.
	Compatible to ST's USB-FS-Device_Lib.
	(USB_MAX_PACKET_SIZE): New.
	(GET_STATUS, CLEAR_FEATURE, RESERVED1, SET_FEATURE, RESERVED2)
	(SET_ADDRESS, GET_DESCRIPTOR, SET_DESCRIPTOR, GET_CONFIGURATION)
	(SET_CONFIGURATION, GET_INTERFACE, SET_INTERFACE)
	(SYNCH_FRAME,TOTAL_REQUEST): New for USB control transfer.