@@ -1,2 +1,3 @@
 # VID:PID	bcdDev	Product_STRING	Vender_STRING	
 234b:0000	0200	FSIJ USB Token	Free Software Initiative of Japan
+##########<TAB>	##<TAB>	##########<TAB>	#################
