@@ -226,6 +226,47 @@ Gnuk is distributed with external source code.
   Cortex-M3.
 
 
+USB vendor ID and product ID (USB device ID)
+============================================
+
+When you have a vender ID and assign a product ID for Gnuk, please
+contact Niibe, so that it is listed to the file GNUK_USB_DEVICE_ID.
+
+When you modify Gnuk and install it to device, you should replace
+"FSIJ" in the string gnukStringSerial to yours, so that it can be
+checked as device serial number.
+
+FSIJ allows you to use USB device ID of FSIJ (234b:0000) for devices
+with Gnuk under one of following conditions:
+
+  * For everyone for experiment purpose:
+
+    - You must not distribute a binary with FSIJ's USB device ID, but
+      must use the binary by yourself only for your experiment.  Note
+      that "Distributing binary" includes distributing a device which
+      holds the binary.
+
+  * For general individuals:
+
+    - You must use your Gnuk device with a card serial number
+      generated by chip unique ID or with the one *not* by FSIJ.
+
+  * For individuals with explicit permission from FSIJ.
+
+    - You should have an assigned card serial number by FSIJ,
+      please use that number for your device.
+      (There a file 'GNUK_SERIAL_NUMBER' in the official release.)
+
+FSIJ could permit companies or business entities to use USB device ID
+of FSIJ for devices with unmodified version of Gnuk, provided they
+support Free Software and respect users' freedom for computing.
+Please ask FSIJ for permission.
+
+Otherwise, companies which want to distribute Gnuk devices, please use
+your own USB vendor ID and product ID.  When you modify Gnuk, please
+replace "FSIJ" in the string gnukStringSerial to yours.
+
+
 Host Requirements
 =================
 
@@ -268,7 +309,10 @@ Change directory to `src':
 
 Then, run `configure':
 
-  $ ./configure
+  $ ./configure --vidpid <VID:PID>
+
+Here, you need to specify USB vendor ID and product ID.
+Please read section 'USB vendor ID and product ID' above.
 
 Type:
 
